cmake_minimum_required(VERSION 3.4)
project(CS327)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    1.00/hyperbinaries.c
    1.00/rational_n.c
    1.01/rlg327-1.01/dungeon.h
    1.01/rlg327-1.01/heap.c
    1.01/rlg327-1.01/heap.h
    1.01/rlg327-1.01/macros.h
    1.01/rlg327-1.01/rlg327.c
    1.02/rlg327-1.02/dungeon.h
    1.02/rlg327-1.02/heap.c
    1.02/rlg327-1.02/heap.h
    1.02/rlg327-1.02/macros.h
    1.02/rlg327-1.02/rlg327.c
    1.03/rlg327-1.03/dims.h
    1.03/rlg327-1.03/dungeon.c
    1.03/rlg327-1.03/dungeon.h
    1.03/rlg327-1.03/heap.c
    1.03/rlg327-1.03/heap.h
    1.03/rlg327-1.03/macros.h
    1.03/rlg327-1.03/path.c
    1.03/rlg327-1.03/path.h
    1.03/rlg327-1.03/rlg327.c
    1.03/rlg327-1.03/utils.c
    1.03/rlg327-1.03/utils.h
    1.04/rlg327-1.04/character.c
    1.04/rlg327-1.04/character.h
    1.04/rlg327-1.04/dims.h
    1.04/rlg327-1.04/dungeon.c
    1.04/rlg327-1.04/dungeon.h
    1.04/rlg327-1.04/heap.c
    1.04/rlg327-1.04/heap.h
    1.04/rlg327-1.04/macros.h
    1.04/rlg327-1.04/move.c
    1.04/rlg327-1.04/move.h
    1.04/rlg327-1.04/npc.c
    1.04/rlg327-1.04/npc.h
    1.04/rlg327-1.04/path.c
    1.04/rlg327-1.04/path.h
    1.04/rlg327-1.04/pc.c
    1.04/rlg327-1.04/pc.h
    1.04/rlg327-1.04/rlg327.c
    1.04/rlg327-1.04/utils.c
    1.04/rlg327-1.04/utils.h
    1.05/rlg327-1.05/character.c
    1.05/rlg327-1.05/character.h
    1.05/rlg327-1.05/dims.h
    1.05/rlg327-1.05/dungeon.c
    1.05/rlg327-1.05/dungeon.h
    1.05/rlg327-1.05/heap.c
    1.05/rlg327-1.05/heap.h
    1.05/rlg327-1.05/io.c
    1.05/rlg327-1.05/io.h
    1.05/rlg327-1.05/macros.h
    1.05/rlg327-1.05/move.c
    1.05/rlg327-1.05/move.h
    1.05/rlg327-1.05/npc.c
    1.05/rlg327-1.05/npc.h
    1.05/rlg327-1.05/path.c
    1.05/rlg327-1.05/path.h
    1.05/rlg327-1.05/pc.c
    1.05/rlg327-1.05/pc.h
    1.05/rlg327-1.05/rlg327.c
    1.05/rlg327-1.05/utils.c
    1.05/rlg327-1.05/utils.h
    1.06/rlg327-1.06/character.cpp
    1.06/rlg327-1.06/character.h
    1.06/rlg327-1.06/dims.h
    1.06/rlg327-1.06/dungeon.c
    1.06/rlg327-1.06/dungeon.h
    1.06/rlg327-1.06/heap.c
    1.06/rlg327-1.06/heap.h
    1.06/rlg327-1.06/io.c
    1.06/rlg327-1.06/io.h
    1.06/rlg327-1.06/macros.h
    1.06/rlg327-1.06/move.c
    1.06/rlg327-1.06/move.h
    1.06/rlg327-1.06/npc.cpp
    1.06/rlg327-1.06/npc.h
    1.06/rlg327-1.06/path.c
    1.06/rlg327-1.06/path.h
    1.06/rlg327-1.06/pc.cpp
    1.06/rlg327-1.06/pc.h
    1.06/rlg327-1.06/rlg327.c
    1.06/rlg327-1.06/utils.c
    1.06/rlg327-1.06/utils.h
    1.06/zhang_yuxiang.assignment-1.06/._character.cpp
    1.06/zhang_yuxiang.assignment-1.06/._character.h
    1.06/zhang_yuxiang.assignment-1.06/._core.c
    1.06/zhang_yuxiang.assignment-1.06/._core.h
    1.06/zhang_yuxiang.assignment-1.06/._debug.c
    1.06/zhang_yuxiang.assignment-1.06/._debug.h
    1.06/zhang_yuxiang.assignment-1.06/._dijkstra.c
    1.06/zhang_yuxiang.assignment-1.06/._dijkstra.h
    1.06/zhang_yuxiang.assignment-1.06/._dungeon.c
    1.06/zhang_yuxiang.assignment-1.06/._dungeon.h
    1.06/zhang_yuxiang.assignment-1.06/._heap.c
    1.06/zhang_yuxiang.assignment-1.06/._heap.h
    1.06/zhang_yuxiang.assignment-1.06/._main.c
    1.06/zhang_yuxiang.assignment-1.06/._move.c
    1.06/zhang_yuxiang.assignment-1.06/._move.h
    1.06/zhang_yuxiang.assignment-1.06/._npc.cpp
    1.06/zhang_yuxiang.assignment-1.06/._npc.h
    1.06/zhang_yuxiang.assignment-1.06/._path.c
    1.06/zhang_yuxiang.assignment-1.06/._path.h
    1.06/zhang_yuxiang.assignment-1.06/._pc.cpp
    1.06/zhang_yuxiang.assignment-1.06/._pc.h
    1.06/zhang_yuxiang.assignment-1.06/._point.c
    1.06/zhang_yuxiang.assignment-1.06/._point.h
    1.06/zhang_yuxiang.assignment-1.06/._room.c
    1.06/zhang_yuxiang.assignment-1.06/._room.h
    1.06/zhang_yuxiang.assignment-1.06/._turn.c
    1.06/zhang_yuxiang.assignment-1.06/._turn.h
    1.06/zhang_yuxiang.assignment-1.06/._ui.c
    1.06/zhang_yuxiang.assignment-1.06/._ui.h
    1.06/zhang_yuxiang.assignment-1.06/._util.c
    1.06/zhang_yuxiang.assignment-1.06/._util.h
    1.06/zhang_yuxiang.assignment-1.06/character.cpp
    1.06/zhang_yuxiang.assignment-1.06/character.h
    1.06/zhang_yuxiang.assignment-1.06/core.c
    1.06/zhang_yuxiang.assignment-1.06/core.h
    1.06/zhang_yuxiang.assignment-1.06/debug.c
    1.06/zhang_yuxiang.assignment-1.06/debug.h
    1.06/zhang_yuxiang.assignment-1.06/dijkstra.c
    1.06/zhang_yuxiang.assignment-1.06/dijkstra.h
    1.06/zhang_yuxiang.assignment-1.06/dungeon.c
    1.06/zhang_yuxiang.assignment-1.06/dungeon.h
    1.06/zhang_yuxiang.assignment-1.06/heap.c
    1.06/zhang_yuxiang.assignment-1.06/heap.h
    1.06/zhang_yuxiang.assignment-1.06/main.c
    1.06/zhang_yuxiang.assignment-1.06/move.c
    1.06/zhang_yuxiang.assignment-1.06/move.h
    1.06/zhang_yuxiang.assignment-1.06/npc.cpp
    1.06/zhang_yuxiang.assignment-1.06/npc.h
    1.06/zhang_yuxiang.assignment-1.06/path.c
    1.06/zhang_yuxiang.assignment-1.06/path.h
    1.06/zhang_yuxiang.assignment-1.06/pc.cpp
    1.06/zhang_yuxiang.assignment-1.06/pc.h
    1.06/zhang_yuxiang.assignment-1.06/point.c
    1.06/zhang_yuxiang.assignment-1.06/point.h
    1.06/zhang_yuxiang.assignment-1.06/room.c
    1.06/zhang_yuxiang.assignment-1.06/room.h
    1.06/zhang_yuxiang.assignment-1.06/turn.c
    1.06/zhang_yuxiang.assignment-1.06/turn.h
    1.06/zhang_yuxiang.assignment-1.06/ui.c
    1.06/zhang_yuxiang.assignment-1.06/ui.h
    1.06/zhang_yuxiang.assignment-1.06/util.c
    1.06/zhang_yuxiang.assignment-1.06/util.h
    1.07/assignment1.07.pdf
    1.08/assignment1.08.pdf
    1.09/assignment1.09.pdf
    README.md 1.07/dice.cpp 1.07/dice.h tests/io.cpp tests/io.h 1.07/parser.cpp 1.07/parser.h tests/io.h 1.07/monster.cpp 1.07/monster.h 1.07/object.cpp 1.07/object.h 1.09/equipment.cpp 1.09/equipment.h)

add_executable(CS327 ${SOURCE_FILES})